--- a/styles/index.css
+++ b/styles/index.css
@@ -132,7 +132,6 @@
   letter-spacing: 0.4px;
   transition: .3s;
   margin-top: 30px;
-
 }
 
 .one__button:hover {
@@ -550,7 +549,6 @@
   background: #2D2D2D;
   padding-top: 120px;
   padding-bottom: 120px;
-
 }
 
 .five__box__text {
@@ -644,7 +642,7 @@
   max-width: 100%;
   padding-top: 70px;
   padding-bottom: 108px;
-  margin: 0 auto;
+  padding-left: 125px;
 }
 
 .six__heading {
@@ -682,7 +680,6 @@
 .six__box__left {
   max-width: 690px;
   margin-top: 72px;
-  margin-left: 125px;
 }
 
 .six__form {
@@ -841,7 +838,7 @@
 
 /* медиа 1 секция */
 
-@media screen and (max-width: 1365px) {
+@media screen and (max-width: 1335px) {
   .header {
     display: flex;
     align-items: center;
@@ -868,6 +865,7 @@
   .one__video {
     max-width: 512px;
     height: 326px;
+    margin: 0 auto;
   }
 
   .one__main__text {
@@ -1090,7 +1088,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
   }
 
   .link__text__burger {
@@ -1241,7 +1238,7 @@
 
 /* медиа 2 секция */
 
-@media screen and (max-width: 1365px) {
+@media screen and (max-width: 1335px) {
 
   .second {
     display: flex;
@@ -1251,7 +1248,9 @@
     flex-wrap: wrap;
     margin: 0 100px 0 100px;
     width: calc(100% - 200px);
+    height: 900px;
     background: #FFFFFF;
+    padding-bottom: 70px;
   }
 
   .second__heading {
@@ -1307,7 +1306,7 @@
     justify-content: center;
     flex-direction: column;
     max-width: 1080px;
-    height: 800px;
+    height: 1108px;
     background: #FFFFFF;
     padding-top: 100px;
     margin: 0;
@@ -1363,6 +1362,7 @@
     flex-wrap: wrap;
     margin: 0 10px 0 10px;
     width: calc(100% - 20px);
+    height: 1496px;
     background: #FFFFFF;
   }
 
@@ -1568,7 +1568,7 @@
 
 /* медиа 3 секция */
 
-@media screen and (max-width: 1365px) {
+@media screen and (max-width: 1335px) {
 
   .third__section {
     display: flex;
@@ -1577,7 +1577,7 @@
     margin: 0 100px 0 100px;
     width: calc(100% - 200px);
     align-items: center;
-    height: 930px;
+    height: 746px;
     background: #FFFFFF;
     padding-top: 140px;
     padding-bottom: 140px;
@@ -1624,10 +1624,11 @@
     justify-content: center;
     margin: 0 40px 0 40px;
     width: calc(100% - 80px);
+    height: 1192px;
     align-items: center;
     background: #FFFFFF;
-    padding-top: 286px;
-    padding-bottom: 140px;
+    padding-top: 70px;
+    padding-bottom: 70px;
   }
 
   .third__list {
@@ -1798,7 +1799,7 @@
 
 /* медиа 4 секция */
 
-@media screen and (max-width: 1365px) {
+@media screen and (max-width: 1335px) {
 
   .section__four {
     display: flex;
@@ -1836,6 +1837,7 @@
   .section__four {
     margin: 0 40px 0 40px;
     width: calc(100% - 80px);
+    height: 940px;
   }
 
   .four__photo__chief {
@@ -1906,7 +1908,6 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-
   }
 
   .four__photos {
@@ -2052,7 +2053,7 @@
 
 /* медиа 5 секция */
 
-@media screen and (max-width: 1365px) {
+@media screen and (max-width: 1335px) {
 
   .five__heading {
     text-align: center;
@@ -2076,6 +2077,7 @@
 
   .five__input {
     height: 60px;
+    width: 348px;
   }
 
   .five__button {
@@ -2157,7 +2159,6 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-
   }
 
   .five__input {
@@ -2173,5 +2174,283 @@
     margin: 0;
     padding: 0;
     margin-top: 20px;
+  }
+}
+
+/* медиа 6 секция */
+
+@media screen and (max-width: 1335px) {
+
+  .six {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 100%;
+    padding-bottom: 108px;
+    padding-left: 0;
+  }
+
+  .six__heading {
+    margin: 0 auto;
+  }
+
+  .six__line {
+    margin: 0 auto;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
+
+  .six__box__right {
+    display: flex;
+    align-items: center;
+    width: 690px;
+    height: 272px;
+    background: #2D2D2D;
+    position: relative;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+
+  .six__box__left {
+    max-width: 380px;
+  }
+
+  .six__text {
+    max-width: 380px;
+    text-align: center;
+  }
+
+  .six__form {
+    max-width: 380px;
+    gap: 0;
+    margin: 0 auto;
+  }
+
+  .six__input {
+    margin: 0 auto;
+    margin-top: 26px;
+  }
+
+  .six__textarea {
+    width: 380px;
+    margin: 0 auto;
+    margin-top: 26px;
+  }
+
+  .six__button {
+    width: 380px;
+    margin: 0 auto;
+    margin-top: 26px;
+  }
+
+  .six__box__right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 380px;
+    height: 448px;
+    background: #2D2D2D;
+    margin-top: 26px;
+    margin-left: 0px;
+    position: relative;
+  }
+
+  .six__right__heading {
+    font-family: 'Open Sans';
+    box-sizing: border-box;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 34px;
+    color: #FFFFFF;
+    white-space: nowrap;
+    width: 315px;
+    letter-spacing: 0.4px;
+    text-transform: uppercase;
+    position: absolute;
+    padding: 12px 83px 300px 38px;
+  }
+
+  .six__right__text {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #FFFFFF;
+    width: 318px;
+    height: 45px;
+    position: absolute;
+    padding: 166px 0px 246px 87px;
+  }
+
+  .right__text {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #FFFFFF;
+    width: 221px;
+    height: 45px;
+    position: absolute;
+    padding: 268px 71px 176px 59px;
+  }
+
+  .six__number {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #FFFFFF;
+    width: 179px;
+    position: absolute;
+    padding: 316px 111px 150px 54px;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .six__heading {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+    text-transform: uppercase;
+    color: #000000;
+    max-width: 280px;
+    margin-bottom: 45px;
+  }
+
+  .six__text {
+    max-width: 280px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .six__form {
+    max-width: 280px;
+    gap: 0;
+    margin: 0 auto;
+  }
+
+  .six__input {
+    width: 100%;
+  }
+
+  .six__box__right {
+    width: 280px;
+  }
+
+  .six__right__heading {
+    font-family: 'Open Sans';
+    box-sizing: border-box;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 34px;
+    color: #FFFFFF;
+    white-space: nowrap;
+    width: 100px;
+    letter-spacing: 0.4px;
+    text-transform: uppercase;
+    position: absolute;
+    padding: 12px 212px 300px 90px;
+  }
+
+  .six__right__text {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #FFFFFF;
+    width: 160px;
+    height: 45px;
+    position: absolute;
+    padding: 73px 0px 246px 24px;
+  }
+
+  .six__box__left {
+    max-width: 280px;
+  }
+
+  .six__textarea {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 26px;
+  }
+
+  .six__button {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 26px;
+  }
+
+  .right__text {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #FFFFFF;
+    width: 160px;
+    height: 45px;
+    position: absolute;
+    padding: 268px 67px 176px 27px;
+  }
+
+  .six__number {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #FFFFFF;
+    width: 179px;
+    position: absolute;
+    padding: 316px 60px 150px 41px;
+  }
+}
+
+/* медиа футер */
+
+@media screen and (max-width: 1335px) {
+  .footer {
+    min-height: 72px;
+    flex-direction: column;
+  }
+
+  .footer__text {
+    padding-top: 0;
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .footer__links {
+    margin: 0 auto;
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__text {
+    width: 380px;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .footer__text {
+    width: 280px;
+  }
+
+  .footer__links {
+    margin: 0 auto;
+    padding-top: 0;
   }
 }
