--- a/styles/index.css
+++ b/styles/index.css
@@ -229,11 +229,6 @@
   height: 238px;
 }
 
-.second__common {
-  width: 305px;
-  height: 238px;
-}
-
 .png {
   width: 37px;
   height: 37px;
@@ -501,10 +496,11 @@
   color: #000000;
   text-decoration: none;
   margin-top: 100px;
+  transition: .5s;
 }
 
 .four__link:hover {
-  text-decoration: underline;
+  color: red;
 }
 
 .four__photos {
