--- a/styles/index.css
+++ b/styles/index.css
@@ -310,7 +310,7 @@
   margin-bottom: 30px;
 }
 
-.third__link {
+.button {
   font-family: 'Open Sans';
   font-weight: 700;
   font-size: 22px;
@@ -319,11 +319,14 @@
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
+  cursor: pointer;
   margin: 0 auto;
+  border: none;
+  background: #FFFFFF;
   transition: .3s;
 }
 
-.third__link:hover {
+.button:hover {
   color: #FF2D2D;
 }
 
@@ -339,15 +342,35 @@
 
 .image {
   width: 240px;
-  height: 240px;
+  height: 260px;
   margin: 10px;
   object-fit: cover;
 }
 
 .image:hover {
   cursor: pointer;
-  transform: scale(1.2);
+  transform: scale(1.08);
   transition: transform 1.05s ease-in-out;
+}
+
+.shu {
+  display: none;
+}
+
+.shen {
+  display: none;
+}
+
+.pao {
+  display: none;
+}
+
+.yin {
+  display: none;
+}
+
+.open {
+  display: block;
 }
 
 /* 4сеция */
