--- a/styles/index.css
+++ b/styles/index.css
@@ -131,17 +131,27 @@
   background: #FF2D2D;
   border-radius: 5px;
   border: none;
+  outline: none;
   cursor: pointer;
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
   font-size: 18px;
   line-height: 34px;
   color: #FFFFFF;
   letter-spacing: 0.4px;
-  transition: .3s;
+  transition: .5s;
   margin-top: 30px;
 }
 
 .one__button:hover {
-  opacity: .7;
+  transform: translatey(-5px);
+  box-shadow: 0 7px 0 #ff1717;
+}
+
+.one__button:active {
+  transform: translateY(-2px);
+  box-shadow: 0 3px 0 #ff1717;
 }
 
 /* 2 cekция */
@@ -221,12 +231,12 @@
   align-items: baseline;
   justify-content: center;
   width: 614px;
-  height: 388px;
+  height: 420px;
 }
 
 .second__common {
   width: 305px;
-  height: 238px;
+  height: 488px;
 }
 
 .img__wheel {
@@ -424,12 +434,12 @@
   height: 260px;
   margin: 10px;
   object-fit: cover;
+  transition: transform 1s ease-in-out;
 }
 
 .image:hover {
   cursor: pointer;
-  transform: scale(1.08);
-  transition: transform 1.05s ease-in-out;
+  transform: scale(1.06);
 }
 
 .shu {
@@ -640,11 +650,12 @@
   width: 100%;
   height: 38px;
   background-color: #000000;
-  opacity: 0.5;
+  opacity: 0;
 }
 
 .four__photo:hover>.four__worker__name {
   visibility: visible;
+  opacity: 0.5;
 }
 
 /* 5 секция */
@@ -865,7 +876,7 @@
   letter-spacing: 0.4px;
   text-transform: uppercase;
   position: absolute;
-  padding: 88px 310px 310px 80px;
+  padding: 142px 310px 286px 80px;
 }
 
 .six__right__text {
@@ -878,7 +889,7 @@
   width: 318px;
   height: 45px;
   position: absolute;
-  padding: 142px 62px 244px 80px;
+  padding: 142px 0px 222px 80px;
 }
 
 .right__text {
@@ -891,7 +902,7 @@
   width: 221px;
   height: 45px;
   position: absolute;
-  padding: 204px 134px 176px 80px;
+  padding: 204px 82px 156px 80px;
 }
 
 .six__number {
@@ -903,7 +914,7 @@
   color: #FFFFFF;
   width: 179px;
   position: absolute;
-  padding: 256px 176px 150px 80px;
+  padding: 256px 118px 128px 80px;
 }
 
 /* футер */
@@ -1047,12 +1058,7 @@
     line-height: 34px;
     color: #FFFFFF;
     letter-spacing: 0.4px;
-    transition: .3s;
     margin: 30px auto 30px auto;
-  }
-
-  .one__button:hover {
-    opacity: .7;
   }
 
   .one__video {
@@ -1272,13 +1278,8 @@
     font-size: 16px;
     line-height: 32px;
     color: #FFFFFF;
-    transition: .3s;
     margin-top: 10px;
     margin: 0 auto;
-  }
-
-  .one__button:hover {
-    opacity: .7;
   }
 }
 
@@ -1866,7 +1867,7 @@
     margin: 0 10px 0 10px;
     width: calc(100% - 20px);
     align-items: center;
-    height: 2554px;
+    height: 2732px;
     background: #FFFFFF;
   }
 
