--- a/styles/index.css
+++ b/styles/index.css
@@ -219,11 +219,21 @@
   color: #FF2D2D;
   margin-top: 62px;
   cursor: pointer;
-  transition: .3s;
+  transition: .5s;
 }
 
 .second__button:hover {
   background: rgb(179, 179, 179);
+}
+
+.second__button:hover {
+  transform: translatey(-5px);
+  box-shadow: 0 7px 0 #ff1717;
+}
+
+.second__button:active {
+  transform: translateY(-2px);
+  box-shadow: 0 3px 0 #ff1717;
 }
 
 .second__right {
@@ -650,7 +660,6 @@
   width: 100%;
   height: 38px;
   background-color: #000000;
-  opacity: 0;
 }
 
 .four__photo:hover>.four__worker__name {
@@ -744,12 +753,18 @@
   border-radius: 5px;
   margin-left: 20px;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.5s;
   margin-top: 30px;
 }
 
 .five__button:hover {
-  opacity: 0.7;
+  transform: translatey(-5px);
+  box-shadow: 0 7px 0 #ff1717;
+}
+
+.five__button:active {
+  transform: translateY(-2px);
+  box-shadow: 0 3px 0 #ff1717;
 }
 
 /* 6 секция */
@@ -840,15 +855,22 @@
   color: #FFFFFF;
   height: 74px;
   width: 734px;
-  background: #FF3B3B;
+  background: #FF2D2D;
   border: none;
+  border-radius: 5px;
   margin-bottom: 100px;
   cursor: pointer;
-  transition: .3s;
+  transition: .5s;
 }
 
 .six__button:hover {
-  opacity: .7;
+  transform: translatey(-5px);
+  box-shadow: 0 7px 0 #ff1717;
+}
+
+.six__button:active {
+  transform: translateY(-2px);
+  box-shadow: 0 3px 0 #ff1717;
 }
 
 .six__box__right {
