--- a/styles/index.css
+++ b/styles/index.css
@@ -427,6 +427,11 @@
 
 .button:hover {
   color: #FF2D2D;
+  transform: translatey(-5px);
+}
+
+.button:active {
+  transform: translateY(-2px);
 }
 
 .third__section__product {
