--- a/styles/index.css
+++ b/styles/index.css
@@ -444,9 +444,14 @@
   list-style-type: none;
 }
 
+.product {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 .image {
-  width: 240px;
-  height: 260px;
   margin: 10px;
   object-fit: cover;
   transition: transform 1s ease-in-out;
