--- a/styles/index.css
+++ b/styles/index.css
@@ -1774,7 +1774,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    width: 599px;
+    width: 600px;
     height: 100%;
     list-style-type: none;
   }
@@ -1983,7 +1983,7 @@
     flex-wrap: wrap;
     cursor: pointer;
     list-style-type: none;
-    width: 670px;
+    width: 700px;
     height: 222px;
     padding: 0;
     margin: 0;
@@ -1999,8 +1999,8 @@
 
   .four__photo__worker {
     display: flex;
-    height: 220px;
-    width: 130px;
+    height: 280px;
+    width: 160px;
     object-fit: cover;
   }
 }
@@ -2013,7 +2013,7 @@
     justify-content: center;
     margin: 0 10px 0 10px;
     width: calc(100% - 20px);
-    height: 1312px;
+    height: 100%;
   }
 
   .four__photo__chief {
@@ -2088,8 +2088,8 @@
   }
 
   .four__photo__worker {
-    width: 130px;
-    height: 200px;
+    width: 160px;
+    height: 260px;
   }
 
   .four__common {
