--- a/styles/six,footer.css
+++ b/styles/six,footer.css
@@ -1,102 +1,4 @@
-/* 5 секция */
-
-.five {
-  box-sizing: border-box;
-  display: block;
-  width: 100%;
-  max-width: 100%;
-  background: #2D2D2D;
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-
-.five__box__text {
-  max-width: 1250px;
-  margin: 0 auto;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.five__heading {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 42px;
-  line-height: 24px;
-  letter-spacing: 1.05px;
-  color: #FFFFFF;
-  max-width: 1129px;
-  margin: 0 auto;
-}
-
-.five__text {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 28px;
-  color: #FFFFFF;
-  width: 574px;
-  margin: 0 auto;
-  margin-top: 20px;
-}
-
-.five__form {
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-}
-
-.five__input {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
-  letter-spacing: 0.4px;
-  display: flex;
-  align-items: center;
-  color: #2C2C2C;
-  width: 524px;
-  height: 82px;
-  border-radius: 5px;
-  border: none;
-  background-color: #FFFFFF;
-  padding-left: 38px;
-}
-
-.five__button {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 34px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  letter-spacing: 0.3px;
-  text-transform: uppercase;
-  width: 217px;
-  height: 82px;
-  background: #FF2D2D;
-  color: #FFFFFF;
-  border: none;
-  border-radius: 5px;
-  margin-left: 20px;
-  cursor: pointer;
-  transition: 0.5s;
-  margin-top: 30px;
-}
-
-.five__button:hover {
-  transform: translatey(-5px);
-  box-shadow: 0 7px 0 #ff1717;
-}
-
-.five__button:active {
-  transform: translateY(-2px);
-  box-shadow: 0 3px 0 #ff1717;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 /* 6 секция */
 
@@ -306,135 +208,6 @@
 .footer__igp {
   height: 33px;
   width: 33px;
-}
-
-
-
-
-/* медиа 5 секция */
-
-@media screen and (max-width: 1335px) {
-
-  .five__heading {
-    text-align: center;
-    font-size: 34px;
-  }
-
-  .five__box__text {
-    margin-bottom: 0;
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  .five {
-    padding-top: 84px;
-    padding-bottom: 84px;
-  }
-
-  .five__heading {
-    font-size: 26px;
-  }
-
-  .five__input {
-    height: 60px;
-    width: 348px;
-  }
-
-  .five__button {
-    height: 60px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-
-  .five {
-    padding-top: 72px;
-    padding-bottom: 72px;
-  }
-
-  .five__box__text {
-    max-width: 400px;
-    margin: 0 auto;
-    text-align: center;
-    margin-bottom: 50px;
-  }
-
-  .five__heading {
-    font-size: 22px;
-    max-width: 400px;
-  }
-
-  .five__text {
-    width: 380px;
-    margin: 0 auto;
-    margin-top: 20px;
-  }
-
-  .five__form {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: baseline;
-  }
-
-  .five__input {
-    width: 318px;
-    height: 40px;
-    margin: 0 auto;
-  }
-
-  .five__button {
-    width: 217px;
-    height: 40px;
-    margin: 0 auto;
-    margin-top: 20px;
-  }
-
-  .five__button:hover {
-    opacity: 0.7;
-  }
-}
-
-@media screen and (max-width: 424px) {
-
-  .five {
-    padding-top: 72px;
-    padding-bottom: 72px;
-  }
-
-  .five__heading {
-    width: 280px;
-    font-size: 20px;
-    margin: 0 auto;
-  }
-
-  .five__text {
-    width: 280px;
-    margin: 0 auto;
-    margin-top: 20px;
-  }
-
-  .five__form {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .five__input {
-    width: 260px;
-    height: 40px;
-    margin: 0;
-    padding: 0;
-  }
-
-  .five__button {
-    width: 180px;
-    height: 40px;
-    margin: 0;
-    padding: 0;
-    margin-top: 20px;
-  }
 }
 
 /* медиа 6 секция */
