--- a/styles/six.footer.css
+++ b/styles/six.footer.css
@@ -177,9 +177,8 @@
 .footer {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
-  min-height: 113px;
   background: #313030;
 }
 
@@ -208,6 +207,14 @@
 .footer__igp {
   height: 33px;
   width: 33px;
+}
+
+.footer__link__box {
+  display: flex;
+  align-items: center;
+  width: 1579px;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
 /* медиа 6 секция */
@@ -429,39 +436,32 @@
   }
 }
 
-/* медиа футер */
-
-@media screen and (max-width: 1335px) {
-  .footer {
-    min-height: 72px;
+@media screen and (max-width: 800px) {
+  .footer__link__box {
+    display: flex;
+    align-items: center;
     flex-direction: column;
+    width: 1579px;
+    justify-content: space-between;
+    margin: 0 auto;
   }
-
   .footer__text {
-    padding-top: 0;
-    margin-left: 0;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
     text-align: center;
-  }
-
-  .footer__links {
+    color: #B8B8B8;
+    padding-top: 40px;
+    margin-left: 125px;
     margin: 0 auto;
-    padding-top: 0;
   }
-}
-
-@media screen and (max-width: 767px) {
-  .footer__text {
-    width: 380px;
-  }
-}
-
-@media screen and (max-width: 424px) {
-  .footer__text {
-    width: 280px;
-  }
-
+  
   .footer__links {
+    display: flex;
+    padding-top: 40px;
+    list-style-type: none;
     margin: 0 auto;
-    padding-top: 0;
   }
-}
+  }
