--- a/styles/six.footer.css
+++ b/styles/six.footer.css
@@ -441,7 +441,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 1579px;
+    width: 300px;
     justify-content: space-between;
     margin: 0 auto;
   }
@@ -463,5 +463,7 @@
     padding-top: 40px;
     list-style-type: none;
     margin: 0 auto;
+    margin-top: 10px;
+    padding: 0;
   }
   }
