--- a/styles/four.css
+++ b/styles/four.css
@@ -13,6 +13,7 @@
 
 .four__common {
   width: 1052px;
+  height: 100%;
   margin: 0 auto;
 }
 
@@ -59,7 +60,7 @@
   display: flex;
   margin: 0 auto;
   align-items: stretch;
-  min-height: 462px;
+  height: 100%;
 }
 
 .four__right {
@@ -206,7 +207,7 @@
 
   .four__common {
     width: 807px;
-    height: 1148px;
+    height: 100%;
     margin: 0 auto;
   }
 
@@ -217,7 +218,7 @@
     margin: 0 auto;
     flex-wrap: wrap;
     align-items: stretch;
-    min-height: 462px;
+    height: 100%px;
   }
 
   .four__info__right {
@@ -261,7 +262,7 @@
 
   .four__common {
     width: 670px;
-    height: 1012px;
+    height: 100%;
   }
 
   .four__photo__worker {
@@ -295,6 +296,7 @@
 
   .four__box {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -311,6 +313,7 @@
     cursor: pointer;
     list-style-type: none;
     width: 360px;
+    height: 100%;
     margin: 0 auto;
   }
 
@@ -362,7 +365,7 @@
   .four__common {
     width: 380px;
     margin: 0 auto;
-    height: 1472px;
+    height: 100%;
   }
 
   .four__left {
@@ -380,7 +383,6 @@
     margin: 0 10px 0 10px;
     width: calc(100% - 20px);
     height: 100%;
-    padding-bottom: 852px;
   }
 
   .four__info__right {
@@ -400,6 +402,7 @@
   .four__photos {
     margin: 0 auto;
     width: 280px;
+    height: 100%;
   }
 
   .four__photo__worker {
@@ -409,7 +412,7 @@
 
   .four__common {
     width: 280px;
-    height: 1472px;
+    height: 100%;
   }
 
   .four__left {
